--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </section>
 
-    <section class="contact">
+    <section class="site-header">
       <h2>Contact</h2>
       <p>WhatsApp :<a href="tel:+2290141449054"> +229 0141449054</a></p>
       <address>
