--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </section>
 
-    <section class="site-header">
+    <section class="">
       <h2>Contact</h2>
       <p>WhatsApp :<a href="tel:+2290141449054"> +229 0141449054</a></p>
       <address>
@@ -87,3 +87,4 @@
   </script>
 </body>
 </html>
+
