--- a/projets/calculatrice/index.html
+++ b/projets/calculatrice/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculatrice</title>
+  <!-- Charset & Responsive -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Titre unique par page -->
+  <title>DesmondTools — Outils web gratuits pour étudiants</title>
+
+  <!-- Description générale (SEO) -->
+  <meta name="description" content="DesmondTools — Calculatrice de moyenne, générateur de CV, convertisseurs et autres outils web gratuits pour lycéens et étudiants Béninois. Développé par DesmondLabs, jeune développeur passionné.">
+
+  <!-- Mots-clés SEO -->
+  <meta name="keywords" content="calculatrice moyenne, outil scolaire gratuit, outil étudiant Bénin, DesmondLabs, générateur CV, convertisseur en ligne, outils pour lycéens, projets étudiants, FCFA, moyenne scolaire">
+
+  <!-- Auteur -->
+  <meta name="author" content="DesmondLabs">
+
+  <!-- Favicon -->
+  <link rel="icon" href="../../assets/img/téléchargement.jpg" type="image/jpg">
+
+  <!-- Open Graph (Facebook, WhatsApp, Messenger, etc.) -->
+  <meta property="og:title" content="DesmondTools — Outils web gratuits pour étudiants">
+  <meta property="og:description" content="Calculatrice de moyenne, générateur de CV et convertisseurs en ligne. Développé par DesmondLabs, jeune développeur Béninois.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://desmondlabs.netlify.app">
+  <meta property="og:image" content="https://desmondlabs.netlify.app/assets/img/téléchargement.jpg">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="DesmondTools — Outils web gratuits pour étudiants">
+  <meta name="twitter:description" content="Calculatrice de moyenne, générateur de CV et convertisseurs. Développé par DesmondLabs.">
+  <meta name="twitter:image" content="https://desmondlabs.netlify.app/assets/img/téléchargement.jpg">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -127,4 +156,5 @@
                     </div>
 <script src="script.js"></script>
 </body>
+
 </html>
