--- a/projets/cv/index.html
+++ b/projets/cv/index.html
@@ -1,11 +1,38 @@
 <!doctype html>
 <html lang="fr">
 <head>
+   <!-- Charset & Responsive -->
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Générateur de CV — Desmond</title>
-  <meta name="description" content="Générateur de CV professionnel — crée, prévisualise et exporte un CV parfait au format PDF." />
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Titre unique par page -->
+  <title>DesmondTools — Outils web gratuits pour étudiants</title>
+
+  <!-- Description générale (SEO) -->
+  <meta name="description" content="DesmondTools — Calculatrice de moyenne, générateur de CV, convertisseurs et autres outils web gratuits pour lycéens et étudiants Béninois. Développé par DesmondLabs, jeune développeur passionné.">
+
+  <!-- Mots-clés SEO -->
+  <meta name="keywords" content="calculatrice moyenne, outil scolaire gratuit, outil étudiant Bénin, DesmondLabs, générateur CV, convertisseur en ligne, outils pour lycéens, projets étudiants, FCFA, moyenne scolaire">
+
+  <!-- Auteur -->
+  <meta name="author" content="DesmondLabs">
+
+  <!-- Favicon -->
+  <link rel="icon" href="../../assets/img/téléchargement.jpg" type="image/jpg">
+
+  <!-- Open Graph (Facebook, WhatsApp, Messenger, etc.) -->
+  <meta property="og:title" content="DesmondTools — Outils web gratuits pour étudiants">
+  <meta property="og:description" content="Calculatrice de moyenne, générateur de CV et convertisseurs en ligne. Développé par DesmondLabs, jeune développeur Béninois.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://desmondlabs.netlify.app">
+  <meta property="og:image" content="https://desmondlabs.netlify.app/assets/img/téléchargement.jpg">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="DesmondTools — Outils web gratuits pour étudiants">
+  <meta name="twitter:description" content="cv moderne, générateur de CV et convertisseurs. Développé par DesmondLabs.">
+  <meta name="twitter:image" content="https://desmondlabs.netlify.app/assets/img/téléchargement.jpg">
+ <link rel="stylesheet" href="style.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.12.1/html2pdf.bundle.min.js"></script>
 </head>
 <body>
@@ -98,3 +125,4 @@ Conçu et lancé un dashboard admin responsive || Augmenté conversion de 35%"><
   <script src="script.js"></script>
 </body>
 </html>
+
