--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="DesmondTools — Outils web gratuits pour étudiants">
   <meta name="twitter:description" content="Calculatrice de moyenne, générateur de CV et convertisseurs. Développé par DesmondLabs.">
-  <meta name="twitter:image" content="https://desmondlabs.netlify.app/assets/img/logo.png">
+  <meta name="twitter:image" content="https://desmondlabs.netlify.app/assets/img/téléchargement.jpg">
 
   <!-- CSS principal -->
   <link rel="stylesheet" href="assets/css/style.css">
@@ -67,7 +67,7 @@
         </div>
     </section>
 
-    <section class="">
+    <section class="hj">
       <h2>Contact</h2>
       <p>WhatsApp :<a href="tel:+2290141449054"> +229 0141449054</a></p>
       <address>
@@ -87,4 +87,5 @@
   </script>
 </body>
 </html>
+
 
